repeating skills working

--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -73,6 +73,9 @@ select {
 .sheet-bold {
   font-weight: bold; }
 
+.sheet-dicefontd10 {
+  font-family: 'dicefontd10'; }
+
 div.sheet-grid {
   display: inline-grid;
   grid-column-gap: 2%;
@@ -221,7 +224,18 @@ div.sheet-container {
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-skill-column div.sheet-skill input {
               border: none; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-repeating-container {
-            grid-column: 1 / 3; }
+            grid-column: 1 / 3;
+            margin-top: 2%; }
+            div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-repeating-container div.repitem {
+              margin-bottom: 2%; }
+              div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills div.sheet-repeating-container div.repitem label > span {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                background-color: #77be7924;
+                font-weight: normal;
+                padding-top: 10%; }
 
 div.sheet-dice-box {
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -380,7 +394,7 @@ div.sheet-training-value div.sheet-green-kits {
   div.sheet-training-value div.sheet-green-kits h2 {
     font-size: 0.8em; }
   div.sheet-training-value div.sheet-green-kits img {
-    margin-left: 25%;
+    margin-left: 20%;
     margin-right: -5%; }
 div.sheet-training-value div.sheet-kits {
   margin-bottom: 5%; }
@@ -392,7 +406,21 @@ div.sheet-training-value div.sheet-kits {
     text-align: center;
     width: 3em !important; }
 
-KitIcons_SwimmingDiving_30x30.png
+div.sheet-repeating-container {
+  grid-template-columns: 4fr 2fr 2fr 10% 10% 1fr; }
+  div.sheet-repeating-container h3 {
+    font-size: 0.8em;
+    text-align: center; }
+  div.sheet-repeating-container button.sheet-dicefontd10 {
+    font-weight: bold;
+    text-align: center; }
+  div.sheet-repeating-container .repcontainer {
+    grid-column: 1 / 7; }
+    div.sheet-repeating-container .repcontainer .repitem {
+      display: inline-grid;
+      grid-template-columns: 4fr 2fr 2fr 10% 10% 1fr;
+      grid-column-gap: 1%; }
+
 div.sheet-tab {
   display: none; }
 
@@ -409,8 +437,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
   width: 189px;
   height: 186px;
   padding: 2px;
-  background: url(https://i.imgur.com/Hr4tcMB.png) top left;
-  /*Post-it note image*/
+  background-color: #e6e6e6;
   background-size: 189px 186px;
   background-repeat: no-repeat;
   font-family: "Courier New", Courier, monospace;
@@ -418,11 +445,10 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
   border-spacing: 0; }
 
 .sheet-rolltemplate-ou-small table {
+  background-color: #e6e6e6;
   width: 189px;
   height: 186px;
   padding: 4px;
-  background: url(https://i.imgur.com/SSQm0oc.png) top left;
-  /*note image*/
   background-size: 189px 186px;
   background-repeat: no-repeat;
   font-family: "Courier New", Courier, monospace;
@@ -513,7 +539,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
 
 .sheet-rolltemplate-ou-small .sheet-speed-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-speed-five .inlinerollresult.fullcrit {
-  background: url(https://i.imgur.com/QIhFKV7.jpg) bottom;
+  background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_Blue_16pxW_x16pxH.jpg) bottom;
   background-size: 19px 19px;
   background-repeat: no-repeat;
   z-index: +1;
@@ -522,7 +548,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
 
 .sheet-rolltemplate-ou-small .sheet-damage-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-damage-five .inlinerollresult.fullcrit {
-  background: url(https://i.imgur.com/EkBzVOm.jpg) bottom;
+  background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_Red_16pxW_x16pxH.jpg) bottom;
   background-size: 19px 19px;
   background-repeat: no-repeat;
   z-index: +1;
@@ -531,7 +557,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
 
 .sheet-rolltemplate-ou-small .sheet-deplete-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-deplete-five .inlinerollresult.fullcrit {
-  background: url(https://i.imgur.com/EvcDFYc.jpg) bottom;
+  background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_White_16pxW_x16pxH.jpg) bottom;
   background-size: 19px 19px;
   background-repeat: no-repeat;
   z-index: +1;
