--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -13,6 +13,10 @@
   font-weight: bold;
 }
 
+.sheet-dicefontd10 {
+  font-family: 'dicefontd10';
+}
+
 div.sheet-grid {
   display: inline-grid;
   grid-column-gap: 2%;
@@ -252,6 +256,21 @@ div.sheet-container {
 
           div.sheet-repeating-container {
             grid-column: 1 / 3;
+            margin-top: 2%;
+
+            div.repitem {
+              margin-bottom: 2%;
+
+              label > span {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                background-color: #77be7924;
+                font-weight: normal;
+                padding-top: 10%;
+              }
+            }
           }
         }
       }
@@ -510,7 +529,7 @@ div.sheet-training-value {
     }
 
     img {
-      margin-left: 25%;
+      margin-left: 20%;
       margin-right: -5%;
     }
   }
@@ -531,7 +550,30 @@ div.sheet-training-value {
   }
 }
 
-KitIcons_SwimmingDiving_30x30.png
+div.sheet-repeating-container {
+  grid-template-columns: 4fr 2fr 2fr 10% 10% 1fr;
+
+  h3 {
+    font-size: 0.8em;
+    text-align: center;
+  }
+
+  button.sheet-dicefontd10 {
+    font-weight: bold;
+    text-align: center;
+  }
+
+  .repcontainer {
+    grid-column: 1 / 7;
+
+    .repitem {
+      display: inline-grid;
+      grid-template-columns: 4fr 2fr 2fr 10% 10% 1fr;
+      grid-column-gap: 1%;
+    }
+  }
+}
+
 
 // HIDDEN SECTIONS
 //=============================
