--- a/Outbreak/src/scss/_rolltemplate.scss
+++ b/Outbreak/src/scss/_rolltemplate.scss
@@ -2,7 +2,7 @@
     width: 189px;
     height: 186px;
     padding: 2px;
-    background: url(https://i.imgur.com/Hr4tcMB.png) top left;/*Post-it note image*/
+    background-color: #e6e6e6;
     background-size: 189px 186px;
     background-repeat: no-repeat;
     font-family: "Courier New", Courier, monospace;
@@ -10,10 +10,10 @@
     border-spacing: 0;
 }
 .sheet-rolltemplate-ou-small table {
+    background-color: #e6e6e6;
     width: 189px;
     height: 186px;
     padding: 4px;
-    background: url(https://i.imgur.com/SSQm0oc.png) top left;/*note image*/
     background-size: 189px 186px;
     background-repeat: no-repeat;
     font-family: "Courier New", Courier, monospace;
@@ -104,7 +104,7 @@
 }
 .sheet-rolltemplate-ou-small .sheet-speed-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-speed-five .inlinerollresult.fullcrit {
-    background: url(https://i.imgur.com/QIhFKV7.jpg) bottom;
+    background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_Blue_16pxW_x16pxH.jpg) bottom;
     background-size: 19px 19px;
     background-repeat: no-repeat;
     z-index: +1;
@@ -113,7 +113,7 @@
 }
 .sheet-rolltemplate-ou-small .sheet-damage-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-damage-five .inlinerollresult.fullcrit {
-    background: url(https://i.imgur.com/EkBzVOm.jpg) bottom;
+    background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_Red_16pxW_x16pxH.jpg) bottom;
     background-size: 19px 19px;
     background-repeat: no-repeat;
     z-index: +1;
@@ -122,7 +122,7 @@
 }
 .sheet-rolltemplate-ou-small .sheet-deplete-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-deplete-five .inlinerollresult.fullcrit {
-    background: url(https://i.imgur.com/EvcDFYc.jpg) bottom;
+    background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_White_16pxW_x16pxH.jpg) bottom;
     background-size: 19px 19px;
     background-repeat: no-repeat;
     z-index: +1;
