UI elements cont.
Added the proper hiding controls for Strain & Street cred 3.0

--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2751,6 +2751,8 @@ span.sheet-vehiclesT {
 .sheet-useFirewall:checked + .sheet-Firewall,
 .sheet-useStrain:checked ~ .sheet-Strain,
 .sheet-useStreetCred:checked ~ .sheet-StreetCred,
+.sheet-useStrainThree:checked ~ .sheet-StrainThree,
+.sheet-useStreetCredThree:checked ~ .sheet-StreetCredThree,
 .sheet-useCorruption:checked + .sheet-Corruption,
 .sheet-useLankhmar:checked + .sheet-lankhmar,
 input[value="3"].sheet-usePieces ~ .sheet-lankhmar,
