--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2538,7 +2538,9 @@ span.sheet-vehiclesT {
 .sheet-Glory,
 .sheet-Firewall,
 .sheet-Strain,
+.sheet-StrainThree,
 .sheet-StreetCred,
+.sheet-StreetCredThree,
 .sheet-Corruption,
 .sheet-Grit,
 .sheet-NT,
