rename images and save changes"

--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -421,6 +421,9 @@ div.sheet-repeating-container {
       grid-template-columns: 4fr 2fr 2fr 10% 10% 1fr;
       grid-column-gap: 1%; }
 
+div.sheet-equipment textarea {
+  min-height: 90px; }
+
 div.sheet-tab {
   display: none; }
 
