--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -6,14 +6,6 @@ input(name='attr_version' type='hidden' value='1')
 //- MIXINS
 include src/pug/_mixins.pug
 
-.grid.navigation
-	each val in ['Main', 'Equipment']
-		if val === 'main'
-			input(name='attr_tab' type='radio' value=val.toLowerCase() checked)
-		else
-			input(name='attr_tab' type='radio' value=val.toLowerCase())
-		span(data-i18n=val) val
-
 .container
 	input(name='attr_tab' type='hidden' value='main')
 	.main.tab
@@ -110,6 +102,10 @@ include src/pug/_mixins.pug
 
 							button.dicefontd10(name=`roll_name` type='roll' value!=`&{template:ou} {{name=@{character_name}}} {{roll_name=@{skill_name}}} {{attr=@{skill}}} {{Target1=[[@{total}]]}} {{Target2=[[@{total}+1]]}} {{skill=VS.}} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}} {{result=[[1d100+@{difficulty_dice} [Diff]]]}} {{dos1=[[@{total}-19]]}} {{dos2a=[[@{total}-20]]}} {{dos2b=[[@{total}-29]]}} {{dos3a=[[@{total}-30]]}} {{dos3b=[[@{total}-39]]}} {{dos4a=[[@{total}-40]]}} {{dos4b=[[@{total}-49]]}} {{dof1=[[@{total}+19]]}} {{dof2a=[[@{total}+20]]}} {{dof2b=[[@{total}+29]]}} {{dof3a=[[@{total}+30]]}} {{dof3b=[[@{total}+39]]}} {{dof4a=[[@{total}+40]]}} {{dof4b=[[@{total}+49]]}}`) t
 
+			.equipment.grid.box
+				h1.green-header.center(data-i18n='Equipment') Equipment
+				textarea(data-i18n-placeholder='Equipment' name='attr_equipment' placeholder='Equipment' value='')
+		
 		.column
 			.grid.box.logo
 				img(alt='Outbreak Character Sheet', src='https://i.imgur.com/css0cBR.png')
@@ -118,7 +114,7 @@ include src/pug/_mixins.pug
 				button(data-i18n='Dice Pool' name='roll_Pool' type='roll' value='&{template:ou-small} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}}')
 
 				.die
-					img(src="https://i.imgur.com/lum5jcz.jpg" title='Difficult Dice')
+					img(src='https://i.imgur.com/lum5jcz.jpg' title='Difficult Dice')
 					select(name='attr_difficulty_dice')
 						- let n = 0;
 						while n < 6
@@ -126,15 +122,15 @@ include src/pug/_mixins.pug
 							- n++
 
 				.die
-					img(src='https://i.imgur.com/QIhFKV7.jpg' title="Speed Dice")
+					img(src='https://i.imgur.com/QIhFKV7.jpg' title='Speed Dice')
 					+diceSelect('speed')
 
 				.die
-					img(src='https://i.imgur.com/EkBzVOm.jpg' title="Damage Dice")
+					img(src='https://i.imgur.com/EkBzVOm.jpg' title='Damage Dice')
 					+diceSelect('damage')
 
 				.die
-					img(src='https://i.imgur.com/JyxTN3O.jpg' title="Depletion Dice" border="1")
+					img(src='https://i.imgur.com/JyxTN3O.jpg' title='Depletion Dice' border='1')
 					+diceSelect('depletion')
 
 				each val in ['difficulty', 'speed', 'damage', 'depletion']
@@ -158,13 +154,13 @@ include src/pug/_mixins.pug
 						.grid.damage-threshold
 							.row
 								h3(data-i18n='Sb + Wb') Sb + Wb
-								input(name='attr_damage_treshold_base' type="number" value="(@{strength_bonus}+@{willpower_bonus})" disabled="true")
+								input(name='attr_damage_treshold_base' type='number' value='(@{strength_bonus}+@{willpower_bonus})' disabled='true')
 							.row
 								h3(data-i18n='Bonus') Bonus
 								input(name='attr_damage_threshold_bonus' type='number' value='0')
 							.row
 								h3(data-i18n='Total') Total
-								input(name='attr_damage_threshold' type='number' value='(@{strength_bonus}+@{willpower_bonus}+@{damage_threshold_bonus})' disabled="true")
+								input(name='attr_damage_threshold' type='number' value='(@{strength_bonus}+@{willpower_bonus}+@{damage_threshold_bonus})' disabled='true')
 
 				.grid.viral
 					h1.yellow-header(data-i18n='Viral') Viral
@@ -184,11 +180,11 @@ include src/pug/_mixins.pug
 					h2(data-i18n='Total') Total
 
 					h2(data-i18n='Morale') Morale
-					input(name='attr_morale_base' type='number' value="(@{willpower_bonus}+@{empathy_bonus})" disabled="true")
+					input(name='attr_morale_base' type='number' value='(@{willpower_bonus}+@{empathy_bonus})' disabled='true')
 					span +
-					input(name='attr_morale_bonus' type='number' value="0")
+					input(name='attr_morale_bonus' type='number' value='0')
 					span =
-					input(name='attr_morale' type='number' value="(@{morale_base}+@{morale_bonus})" disabled="true")
+					input(name='attr_morale' type='number' value='(@{morale_base}+@{morale_bonus})' disabled='true')
 
 					h2(data-i18n='Coping Mechanisms') Coping Mechanisms
 					textarea(name='attr_coping_mechanisms')
@@ -211,7 +207,6 @@ include src/pug/_mixins.pug
 							h2(data-i18n=`${val}`) #{val}
 							img(alt='' src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/KitIcons_${val.replace(/ /g, '').replace('/', '')}_30x30.png`)
 							input(name=`attr_${name}` type='number' value='')
-		.equipment.tab
 
 
 //- ROLL TEMPLATE
@@ -219,5 +214,5 @@ include src/pug/rolltemplate.html
 
 
 //- SCRIPTS
-script(type="text/worker")
+script(type='text/worker')
 	include src/js/scripts.js
