--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -574,6 +574,12 @@ div.sheet-repeating-container {
   }
 }
 
+div.sheet-equipment {
+  textarea {
+    min-height: 90px;
+  }
+}
+
 
 // HIDDEN SECTIONS
 //=============================
