--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -108,30 +108,23 @@ include src/pug/_mixins.pug
 		
 		.column
 			.grid.box.logo
-				img(alt='Outbreak Character Sheet', src='https://i.imgur.com/css0cBR.png')
+				img(alt='Outbreak Character Sheet', src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Logo_340pxWx90pxH.png')
 					
 			.grid.box.dice-box
 				button(data-i18n='Dice Pool' name='roll_Pool' type='roll' value='&{template:ou-small} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}}')
 
 				.die
-					img(src='https://i.imgur.com/lum5jcz.jpg' title='Difficult Dice')
+					img(alt='difficulty dice' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_difficulty_16pxW_x16pxH.jpg' title='Difficult Dice')
 					select(name='attr_difficulty_dice')
 						- let n = 0;
 						while n < 6
 							option(data-i18n=n value=`[[${n}d6!p]]`) #{n}
 							- n++
 
-				.die
-					img(src='https://i.imgur.com/QIhFKV7.jpg' title='Speed Dice')
-					+diceSelect('speed')
-
-				.die
-					img(src='https://i.imgur.com/EkBzVOm.jpg' title='Damage Dice')
-					+diceSelect('damage')
-
-				.die
-					img(src='https://i.imgur.com/JyxTN3O.jpg' title='Depletion Dice' border='1')
-					+diceSelect('depletion')
+				each val in ['speed', 'damage', 'depletion']
+					.die
+						img(alt=`${val} dice` src=`https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_${val}_16pxW_x16pxH.jpg`)
+						+diceSelect(`${val}`)
 
 				each val in ['difficulty', 'speed', 'damage', 'depletion']
 					.die
