--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -186,6 +186,8 @@ div.sheet-container {
           grid-template-columns: 49% 49%; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h1, div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h2 {
             grid-column: 1 / 3; }
+          div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills h2[data-i18n='Basic Skills'] {
+            line-height: inherit; }
           div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button {
             font-size: 0.8em; }
             div.sheet-container div.sheet-main div.sheet-column div.sheet-spewbox div.sheet-skills button > span {
@@ -253,36 +255,12 @@ div.sheet-dice-box {
   div.sheet-dice-box span[data-i18n='d5!'] {
     margin-right: -10%; }
 
-div.sheet-skilllabel {
-  background-image: url("https://i.imgur.com/lPWJPdo.png");
-  background-repeat: no-repeat;
-  background-position: center top;
-  text-align: center;
-  font-weight: bold; }
-
-div.sheet-skillbox {
-  display: flex;
-  align-content: center;
-  justify-content: space-evenly; }
-  div.sheet-skillbox .sheet-skillname {
-    width: 110px; }
-  div.sheet-skillbox .sheet-skillstat {
-    width: 28px; }
-
 div.sheet-box {
   box-sizing: border-box;
   border: 10px solid transparent;
-  -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
+  -webkit-border-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/background.png) 18 18 repeat;
   box-shadow: 3px 5px 2px #888888;
   float: left; }
-
-div.sheet-spewbox,
-div.sheet-biobox,
-div.sheet-dicepoolbox {
-  grid-auto-rows: min-content;
-  box-sizing: border-box;
-  border: 10px solid transparent;
-  -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat; }
 
 div.sheet-dicelabel {
   grid-auto-rows: min-content;
@@ -422,7 +400,7 @@ div.sheet-repeating-container {
       grid-column-gap: 1%; }
 
 div.sheet-equipment textarea {
-  min-height: 90px; }
+  min-height: 100px; }
 
 div.sheet-tab {
   display: none; }
