--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -186,6 +186,10 @@ div.sheet-container {
             grid-column: 1 / 3;
           }
 
+          h2[data-i18n='Basic Skills'] {
+            line-height: inherit;
+          }
+
           button {
             font-size: 0.8em;
 
@@ -303,43 +307,12 @@ div.sheet-dice-box {
   }
 }
 
-  div.sheet-skilllabel {
-    background-image: url("https://i.imgur.com/lPWJPdo.png");
-    background-repeat: no-repeat;
-    background-position: center top;
-    text-align: center;
-    font-weight: bold;
-  }
-
-  div.sheet-skillbox {
-    .sheet-skillname {
-      width: 110px;
-    }
-    .sheet-skillstat {
-      width: 28px;
-    }
-    display: flex;
-    align-content: center;
-    justify-content: space-evenly;
-    button {
-    }
-  }
-
   div.sheet-box {
     box-sizing: border-box;
     border: 10px solid transparent;
-    -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
+    -webkit-border-image: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/background.png) 18 18 repeat;
     box-shadow: 3px 5px 2px #888888;
     float: left;
-  }
-
-  div.sheet-spewbox,
-  div.sheet-biobox,
-  div.sheet-dicepoolbox {
-    grid-auto-rows: min-content;
-    box-sizing: border-box;
-    border: 10px solid transparent;
-    -webkit-border-image: url(https://i.imgur.com/vniFmtN.png) 18 18 repeat;
   }
 
   div.sheet-dicelabel {
@@ -576,7 +549,7 @@ div.sheet-repeating-container {
 
 div.sheet-equipment {
   textarea {
-    min-height: 90px;
+    min-height: 100px;
   }
 }
 
