save final draft

--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -319,7 +319,7 @@ div.sheet-health div.sheet-viral input[type="checkbox"] {
   width: 19px; }
   div.sheet-health div.sheet-viral input[type="checkbox"]:checked {
     background: #ccff33;
-    content: url(https://i.imgur.com/WcF3c39.png);
+    content: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/virus.png);
     border: none; }
     div.sheet-health div.sheet-viral input[type="checkbox"]:checked:after {
       -moz-transform: translate(-50%, -50%);
