--- a/Outbreak/outbreak.scss
+++ b/Outbreak/outbreak.scss
@@ -408,7 +408,7 @@ div.sheet-health {
 
       &:checked {
         background: #ccff33;
-        content: url(https://i.imgur.com/WcF3c39.png);
+        content: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/virus.png);
         border: none;
 
         &:after {
