--- a/Outbreak/outbreak.css
+++ b/Outbreak/outbreak.css
@@ -520,7 +520,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
 
 .sheet-rolltemplate-ou-small .sheet-speed-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-speed-five .inlinerollresult.fullcrit {
-  background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_Blue_16pxW_x16pxH.jpg) bottom;
+  background: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_speed_16pxW_x16pxH.jpg") bottom;
   background-size: 19px 19px;
   background-repeat: no-repeat;
   z-index: +1;
@@ -529,7 +529,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
 
 .sheet-rolltemplate-ou-small .sheet-damage-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-damage-five .inlinerollresult.fullcrit {
-  background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_Red_16pxW_x16pxH.jpg) bottom;
+  background: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_damage_16pxW_x16pxH.jpg") bottom;
   background-size: 19px 19px;
   background-repeat: no-repeat;
   z-index: +1;
@@ -538,7 +538,7 @@ input[name='attr_tab'][value='log'] ~ div.sheet-log {
 
 .sheet-rolltemplate-ou-small .sheet-deplete-five .inlinerollresult.fullcrit,
 .sheet-rolltemplate-ou .sheet-deplete-five .inlinerollresult.fullcrit {
-  background: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_White_16pxW_x16pxH.jpg) bottom;
+  background: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/HuntersIcon_depletion_16pxW_x16pxH.jpg") bottom;
   background-size: 19px 19px;
   background-repeat: no-repeat;
   z-index: +1;
