--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -34,7 +34,7 @@ include src/pug/_mixins.pug
 				h2(data-i18n='Character Resources') Character Resources
 				.grid.points
 					each val in ['Survival', 'Gestalt', 'Competance']
-						-const name = val.toLowerCase();
+						-const name = val === 'Gestalt' ? `${val.toLowerCase()}_level` : `${val.toLowerCase()}_points` ;
 						if val === 'Gestalt'
 							h3.yellow-header(data-i18n=`${val} Level:`) #{val} Level:
 						else
@@ -69,10 +69,10 @@ include src/pug/_mixins.pug
 					h2(data-i18n='Expert Skills') Expert Skills
 					.skill-column
 						each val, key in {'Adv Medicine':['perception', 'willpower'], 'Construct Engineer':['perception', 'willpower'], 'Martial Arts':['strength', 'perception'], 'Pilot':['perception', 'willpower']}
-							+skillList(key, val[0], val[1])
+							+expertSkillList(key, val[0], val[1])
 					.skill-column
 						each val, key in {'Ride': ['empathy', 'willpower'], 'Science':['perception', 'willpower'], 'Survival':['perception', 'willpower'], 'Toughness':['strength', 'willpower']}
-							+skillList(key, val[0], val[1])
+							+expertSkillList(key, val[0], val[1])
 					.grid.repeating-container
 						each val in ['Specalizations', 'Attr', 'Bonus', 'Adv', 'Skill', 'Roll',]
 							h3(data-i18n=val) #{val}
@@ -82,11 +82,11 @@ include src/pug/_mixins.pug
 							input(name=`attr_total` type='hidden' value=`(@{skill} [Skill]+@{button_base} [Kit])`)
 							input(name=`attr_skill_name` type='text' value=``)
 
-							select(name='attr_attribute_base' value='@{perception}')
-								option(value='@{strength}') strength
-								option(value='@{perception}' selected) perception
-								option(value='@{empathy}') empathy
-								option(value='@{willpower}') willpower
+							select(name='attr_attribute_base' value='@{perception_bonus}')
+								option(value='@{strength_bonus}') strength
+								option(value='@{perception_bonus}' selected) perception
+								option(value='@{empathy_bonus}') empathy
+								option(value='@{willpower_bonus}') willpower
 
 							select(name='attr_attribute_bonus' value='@{willpower_bonus}')
 								option(value='@{strength_bonus}') strength
