--- a/Outbreak/src/pug/_mixins.pug
+++ b/Outbreak/src/pug/_mixins.pug
@@ -39,3 +39,20 @@ mixin skillList(skill, primaryAttribute, secondaryAttribute)
 			input.center(name=`attr_${name}_advancement` title=`attr_${name}_advancement` type='number' value='0')
 		label
 			input.center(name=`attr_${name}` title=`attr_${name}` type='number' value=`[[@{${name}_attributes}+@{${name}_advancement}]]` disabled='true')
+
+//- SKILL BUILDERS
+mixin expertSkillList(skill, primaryAttribute, secondaryAttribute)
+	.skill
+		-const name = skill.toLowerCase().replace('/', '_').replace(' ', '_');
+		input(name=`attr_${name}_button_base` type='hidden' value=`[[(?{Gear Or Kit| None, 0 | Archery, @{archery_gear}+@{${primaryAttribute}_bonus}|Athletic Gear, @{athletic_gear}+@{${primaryAttribute}_bonus}|Bludgeon, @{bludgeoning}+@{${primaryAttribute}_bonus}|Climbing Gear, @{climbing_gear}+@{${primaryAttribute}_bonus}|Command Apparatus, @{command_app}+@{${primaryAttribute}_bonus}|Firefighting, @{firefighting}+@{${primaryAttribute}_bonus}|First Aid Kit, @{first_aid_kits}+@{${primaryAttribute}_bonus}|Long Gun, @{long_gun}+@{${primaryAttribute}_bonus}|Martial Arts, @{martial_arts}+@{${primaryAttribute}_bonus}|Medical Gear, @{medical_gear}+@{${primaryAttribute}_bonus}|Piercing, @{piercing}+@{${primaryAttribute}_bonus}|Pistol, @{pistol}+@{${primaryAttribute}_bonus}|Recon Gear, @{recon_gear}+@{${primaryAttribute}_bonus}|Slashing, @{slashing}+@{${primaryAttribute}_bonus}|Survival Kit, @{survival_kit}+@{${primaryAttribute}_bonus}|Swimming/Diving, @{swimming_diving}+@{${primaryAttribute}_bonus}|Throwing, @{throwing}+@{${primaryAttribute}_bonus}|Tools, @{tools}+@{${primaryAttribute}_bonus}|Value, @{value}+@{${primaryAttribute}_bonus}|Vehicles, @{vehicles}+@{${primaryAttribute}_bonus}})*?{Multiplier|1|2|3|4|5}]]`)
+
+		input(name=`attr_${name}_attributes` type='hidden' value=`(@{${primaryAttribute}_bonus}+@{${secondaryAttribute}_bonus})`)
+			
+		input(name=`attr_${name}_total` type='hidden' value=`(@{${name}} [Skill]+@{${name}_button_base} [Kit])`)
+
+		button(name=`roll_${skill}` type='roll' value!=`&{template:ou} {{name=@{character_name}}} {{roll_name=^{${skill}}}} {{attr=${skill}}} {{Target1=[[@{${name}_total}]]}} {{Target2=[[@{${name}_total}+1]]}} {{skill=VS.}} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}} {{result=[[1d100+@{difficulty_dice} [Diff]]]}} {{dos1=[[@{${name}_total}-19]]}} {{dos2a=[[@{${name}_total}-20]]}} {{dos2b=[[@{${name}_total}-29]]}} {{dos3a=[[@{${name}_total}-30]]}} {{dos3b=[[@{${name}_total}-39]]}} {{dos4a=[[@{${name}_total}-40]]}} {{dos4b=[[@{${name}_total}-49]]}} {{dof1=[[@{${name}_total}+19]]}} {{dof2a=[[@{${name}_total}+20]]}} {{dof2b=[[@{${name}_total}+29]]}} {{dof3a=[[@{${name}_total}+30]]}} {{dof3b=[[@{${name}_total}+39]]}} {{dof4a=[[@{${name}_total}+40]]}} {{dof4b=[[@{${name}_total}+49]]}}`) 
+			span(data-i18n=`${skill}`) #{skill}
+		label
+			input.center(name=`attr_${name}_advancement` title=`attr_${name}_advancement` type='number' value='0')
+		label
+			input.center(name=`attr_${name}` title=`attr_${name}` type='number' value=`[[@{${name}_attributes}+@{${name}_advancement}]]` disabled='true')
