--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2717,7 +2717,7 @@ span.sheet-vehiclesT {
     display: inline-block;
 }
 
-/*--- Strain ---*/
+/*---  IZ 2.0 Strain ---*/
 
 .sheet-strain {
     text-align: center;
@@ -2739,7 +2739,31 @@ span.sheet-vehiclesT {
 	font-weight: bold;
 }
 
-/*--- End Strain ---*/
+/*--- End IZ 2.0 Strain ---*/
+
+/*---  IZ 3.0 Strain ---*/
+
+.sheet-strainthree {
+    text-align: center;
+}
+
+.charsheet .sheet-dangerthree,
+.charsheet .sheet-criticalthree {
+	display: none;
+}
+
+.charsheet input.sheet-dangerthree:checked ~ input.sheet-strainthree {
+	background: #e8a400;
+	font-weight: bold;
+}
+
+.charsheet input.sheet-criticalthree:checked ~ input.sheet-strainthree {
+	background: #e93a41;
+	color: white;
+	font-weight: bold;
+}
+
+/*--- End  IZ 3.0 Strain ---*/
 
 /*--- Derived Stats ---*/
 .sheet-useFame:checked + .sheet-Fame,
