--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2541,6 +2541,7 @@ span.sheet-vehiclesT {
 .sheet-StrainThree,
 .sheet-StreetCred,
 .sheet-StreetCredThree,
+.sheet-showstreetcredthreewilddie,
 .sheet-Corruption,
 .sheet-Grit,
 .sheet-NT,
@@ -2811,6 +2812,10 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 .sheet-usewealth:checked ~ .sheet-lankhmar,
 .sheet-usewealth:checked + .sheet-useLankhmar:checked + .sheet-lankhmar {
 	display: none;
+}
+
+.sheet-useStreetCred:checked ~ .sheet-showstreetcredthreewilddie {
+    display: flex;
 }
 
 .sheet-usewealth:checked ~ .sheet-usewealth,
