Fixed up main display
The character sheet now properly shows off the street cred value

--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2814,7 +2814,7 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 	display: none;
 }
 
-.sheet-useStreetCred:checked ~ .sheet-showstreetcredthreewilddie {
+.sheet-useStreetCredThree:checked ~ .sheet-showstreetcredthreewilddie {
     display: flex;
 }
 
