added intial note setup

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -958,12 +958,20 @@ input.sheet-border-bottom {
 }
 
 /* BONDS */
-.sheet-bond-name {
+.sheet-bond-name,
+.sheet-bond-location,
+.sheet-bond-descriptors {
     border: none;
 }
 
-.sheet-bond-name::placeholder {
+.sheet-bond-name::placeholder,
+.sheet-bond-location::placeholder,
+.sheet-bond-descriptors::placeholder {
     color: #8a8a8a;
+}
+
+input[type="checkbox"].sheet-show-bond-info:checked ~ div.sheet-show-bond-info {
+    display: flex;
 }
 
 /* ROLL TEMPLATE */
