added styling and placeholders

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -958,10 +958,42 @@ input.sheet-border-bottom {
 }
 
 /* BONDS */
+.sheet-bond-container {
+    border: 2px solid #414042;
+    border-radius: 2em;
+    margin-bottom: 1em;
+    padding: 1em;
+}
+
 .sheet-bond-name,
 .sheet-bond-location,
 .sheet-bond-descriptors {
     border: none;
+    border-radius: 0em;
+    margin-left: 1em;
+    background: transparent;
+    padding: 0;
+}
+
+.sheet-bond-descriptors,
+.sheet-bond-location {
+    width: 40%;
+}
+
+.sheet-bond-notes-title {
+    margin-top: 0.3em;
+}
+
+p.sheet-bond-title {
+    text-align: left;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
+    font-size: 16px;
+    margin: 0 0 0px;
+    padding: 0;
+    text-transform: uppercase;
+    vertical-align: bottom;
+    display: inline;
 }
 
 .sheet-bond-name::placeholder,
@@ -972,6 +1004,12 @@ input.sheet-border-bottom {
 
 input[type="checkbox"].sheet-show-bond-info:checked ~ div.sheet-show-bond-info {
     display: flex;
+    flex-flow: row wrap;
+}
+
+.sheet-full-width {
+    width: 100%;
+    margin-top: 0.3em;
 }
 
 /* ROLL TEMPLATE */
