--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -352,7 +352,7 @@ textarea.sheet-full-width {
 }
 
 input.sheet-filler[type="radio"],
-input[type="checkbox"]
+input[type="checkbox"].sheet-checkbox
 {
     opacity: 0;
     width: 16px;
@@ -367,7 +367,7 @@ input[type="checkbox"]
 
 /* Fake radio/checkbox */
 input[type="radio"] + span::before,
-input[type="checkbox"] + span::before
+input[type="checkbox"].sheet-checkbox + span::before
 {
     margin-right: 4px;
     border: solid 1px #a8a8a8;
@@ -387,7 +387,7 @@ input[type="checkbox"] + span::before
     background: -o-radial-gradient(#f6f6f6, #dfdfdf);
     background: radial-gradient(#f6f6f6, #dfdfdf);
 }
-input[type="checkbox"] + span::before,
+input[type="checkbox"].sheet-checkbox + span::before,
 input.sheet-filler[type="radio"] + span::before
 {
     content: "";
@@ -399,7 +399,7 @@ input.sheet-filler[type="radio"] + span::before
     -webkit-border-radius: 3px;
     border-radius: 3px;
 }
-input[type="checkbox"]:checked + span::before
+input[type="checkbox"].sheet-checkbox:checked + span::before
 {
     content: "■";
 }
@@ -960,9 +960,13 @@ input.sheet-border-bottom {
 /* BONDS */
 .sheet-bond-container {
     border: 2px solid #414042;
-    border-radius: 2em;
+    border-radius: 1em;
     margin-bottom: 1em;
     padding: 1em;
+}
+
+.sheet-bond-notes {
+    width: 99%;
 }
 
 .sheet-bond-name,
@@ -970,18 +974,17 @@ input.sheet-border-bottom {
 .sheet-bond-descriptors {
     border: none;
     border-radius: 0em;
-    margin-left: 1em;
     background: transparent;
     padding: 0;
+    padding-left: 0.5em;
 }
 
-.sheet-bond-descriptors,
+.sheet-bond-descriptors {
+    width: 43%;
+}
+
 .sheet-bond-location {
     width: 40%;
-}
-
-.sheet-bond-notes-title {
-    margin-top: 0.3em;
 }
 
 p.sheet-bond-title {
@@ -990,10 +993,13 @@ p.sheet-bond-title {
     font-weight: bold;
     font-size: 16px;
     margin: 0 0 0px;
-    padding: 0;
+    padding: 0.1em 0.2em 0.1em 0.2em;
     text-transform: uppercase;
     vertical-align: bottom;
     display: inline;
+    background: #414042;
+    color: white;
+    border-radius: 0.3em 0em 0em 0.3em;
 }
 
 .sheet-bond-name::placeholder,
@@ -1005,6 +1011,39 @@ p.sheet-bond-title {
 input[type="checkbox"].sheet-show-bond-info:checked ~ div.sheet-show-bond-info {
     display: flex;
     flex-flow: row wrap;
+}
+
+input[type="checkbox"].sheet-show-bond-info {
+    width: 4.5em;
+    height: 18px;
+    top: 0;
+    opacity: 0;
+    border-radius: 4px;
+    padding: 2px 4px;
+}
+
+input[type="checkbox"].sheet-show-bond-info:hover ~ span.sheet-show-bond-info {
+    border-radius: 4px;
+    padding: 2px 4px;
+    background-color: #ccc;
+    color: black;
+}
+
+input[type="checkbox"].sheet-show-bond-info:checked ~ span.sheet-show-bond-info {
+    border-radius: 4px;
+    padding: 2px 4px;
+    border: 1px solid;
+    background-color: #414042;
+    color: white;
+}
+
+span.sheet-show-bond-info {
+    margin-left: -4.9em;
+    border-radius: 4px;
+    padding: 2px 4px;
+    border: 1px solid;
+    font-family: Copperplate, "Copperplate Gothic Light", arial;
+    font-weight: bold;
 }
 
 .sheet-full-width {
