updated size difference for page 2 label

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -188,7 +188,7 @@ input.sheet-page2 {
 
 span.sheet-page-label-2 {
     width: 75px;
-    margin-left: -82px;
+    margin-left: -78px;
 }
 
 input.sheet-page3 {
@@ -196,6 +196,24 @@ input.sheet-page3 {
 }
 
 span.sheet-page-label-3 {
+    margin-left: -64px;
+    width: 60px;
+}
+
+input.sheet-page4 {
+    width: 60px;
+}
+
+span.sheet-page-label-4 {
+    margin-left: -64px;
+    width: 60px;
+}
+
+input.sheet-page5 {
+    width: 60px;
+}
+
+span.sheet-page-label-5 {
     margin-left: -64px;
     width: 60px;
 }
