fixed momentum burn to use span rather than label

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -264,25 +264,31 @@ span.sheet-page-label-5 {
     align-items: center;
 }
 
-div.sheet-momentum-burn {
-    display: flex;
-}
-
-label.sheet-momentum-burn:hover {
-    cursor: pointer;
+input[type=checkbox].sheet-momentum-burn:hover ~ span.sheet-momentum-burn {
     border-radius: 4px;
     background-color: #ccc;
     color: black;
 }
 
-label.sheet-momentum-burn {
+input[type=checkbox].sheet-momentum-burn {
+    width: 80px;
+    height: 1.3em;
+    opacity: 0;
+}
+
+div.sheet-momentum-burn {
+    margin-bottom: 0.5em;
+}
+
+span.sheet-momentum-burn {
     border-radius: 4px;
     text-align: center;
     border: 1px solid #ccc;
-    padding: 0.2em 0.9em 0.2em 0.9em;
+    padding: 0.2em 1.3em 0.2em 1.3em;
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
     font-size: 14px;
+    margin-left: -79px;
 }
 
 .sheet-bonds {
