fixed custom debilities

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -322,8 +322,7 @@ span.sheet-momentum-burn {
 }
 .sheet-debility {
     display: flex;
-    justify-content: center;
-    align-items: top;
+    flex-flow: row wrap;
 }
 
 .sheet-flex-container {
