Wild die for Street Cred Three
Now can change the wild die for street cred from IZ 3

--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2541,7 +2541,6 @@ span.sheet-vehiclesT {
 .sheet-StrainThree,
 .sheet-StreetCred,
 .sheet-StreetCredThree,
-.sheet-showstreetcredthreewilddie,
 .sheet-Corruption,
 .sheet-Grit,
 .sheet-NT,
@@ -2804,7 +2803,8 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 .sheet-usewealthmod,
 .sheet-showconsumables,
 .sheet-consumablesmod,
-.sheet-showwealthwilddie {
+.sheet-showwealthwilddie,
+.sheet-showstreetcredthreewilddie {
 	display: none;
 }
 
@@ -2815,7 +2815,7 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 }
 
 .sheet-izStreetCredThree:checked ~ .sheet-showstreetcredthreewilddie {
-    display: flex;
+    display: inline;
 }
 
 .sheet-usewealth:checked ~ .sheet-usewealth,
