--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -2066,12 +2066,17 @@ input[value="0"].sheet-showmultiattack ~ select > .sheet-multiattack {
     align-items: flex-start;
 }
 
+.sheet-augenable,
 .sheet-augitem,
 .sheet-augstrain,
 .sheet-augdetails {
     display: inline-block;
     text-align: center;
     box-sizing: border-box;
+}
+
+.sheet-augenable {
+    width: 46px !important;
 }
 
 .sheet-augitem {
@@ -2084,7 +2089,7 @@ input[value="0"].sheet-showmultiattack ~ select > .sheet-multiattack {
 }
 
 .sheet-augdetails {
-    width: 560px !important;
+    width: 510px !important;
     height: 27px;
     border: none;
     text-align: left;
@@ -2814,7 +2819,7 @@ input:not([value="3"]).sheet-usePieces ~ .sheet-derivebase > .sheet-moneyfield {
 	display: none;
 }
 
-.sheet-izStreetCredThree:checked ~ .sheet-showstreetcredthreewilddie {
+.sheet-useStreetCredThree:checked ~ .sheet-showstreetcredthreewilddie {
     display: inline;
 }
 
