--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -906,7 +906,7 @@ hr.sheet-modsection {
 /*------Wounds & Fatigue------*/
 .sheet-conditions {
 	text-align: center;
-	display:flex;
+	display:none;
 	-ms-flex-pack: distribute;
 	    justify-content: space-around;
 	-ms-flex-wrap: wrap;
@@ -917,6 +917,11 @@ hr.sheet-modsection {
 	margin-bottom: 5px;
 	margin-top: -5px;
 }
+
+.sheet-showconditions:checked ~ .sheet-conditions {
+    display:flex;
+}
+
 
 .sheet-distracted,
 .sheet-vulnerable,
