update gurps 4e sheet
Refactor options tab layout.
Add Point summary layout options.

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -998,10 +998,55 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     font-size: 14px;
 }
 
+/* ============ TAB Sheet Options ============ */
+
+.sheet-options {
+    width: 100%;
+    margin-bottom: 10px;
+    border-bottom: 2px solid gray;
+}
+
+.sheet-options.sheet-short-height {
+    height: 148px;
+}
+
+.sheet-options.sheet-medium-height {
+    height: 300px;
+}
+
+.sheet-options.sheet-tall-height {
+    height: 1460px;
+}
+
+.sheet-options .sheet-option-column {
+    width: 33%;
+    float: left;
+}
+
+.sheet-options .sheet-option-container {
+    outline: 1px solid gray;
+    padding: 5px;
+    margin: 0 15px 10px 0;
+}
+
+.sheet-options .sheet-option-container.sheet-damage-dice {
+    height: 56px;
+}
+
+.sheet-options .sheet-option-container.sheet-damage-dice div {
+    margin: 5px 10px 5px 0;
+    float: left;
+}
+
+.sheet-options .sheet-collision-falling-options {
+    padding-right: 20px;
+}
+
 /* display manual input checkbox */
-.sheet-options .sheet-box input.sheet-manual-unspent-box {
+.sheet-options input.sheet-manual-unspent-box {
     opacity: 1;
 }
+
 
 /* show/hide manual unspent box */
 input.sheet-toggle-unspoint-points[value="1"] ~ .sheet-row-unspent  {
@@ -1104,15 +1149,6 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-container-feats .sheet-container-jumping {
     margin-left: 20px;
-}
-
-.sheet-options .sheet-box {
-    margin: 10px;
-    padding: 2px;
-}
-
-.sheet-options .sheet-collision-falling-options textarea {
-    width: 184px;
 }
 
 /* show/hide table */
@@ -2281,8 +2317,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-damage-type-notes .sheet-toggle-notes {
-    text-align: center;
-    margin: 10px;
+    margin: 10px 0 10px 0;
 }
 
 .sheet-damage-type-notes th {
